vlib/v/checker/tests/non_optional_array_append_optional_type_err.out
vlib/v/checker/tests/non_optional_array_append_optional_type_err.vv:12:10: error: unwrapped Option cannot be used in an infix expression
   10 | fn main() {
   11 |     mut foobars := []Foobar{}
   12 |     foobars << ?Foobar(.foo)
      |             ~~
   13 |     foobars << get_foo_or_none(true)
   14 | }
vlib/v/checker/tests/non_optional_array_append_optional_type_err.vv:13:10: error: unwrapped Option cannot be used in an infix expression
   11 |     mut foobars := []Foobar{}
   12 |     foobars << ?Foobar(.foo)
   13 |     foobars << get_foo_or_none(true)
      |             ~~
   14 | }
