vlib/v/checker/tests/non_optional_array_append_optional_type_err.vv
pub enum Foobar {
	foo
	bar
}

fn get_foo_or_none(fail bool) ?Foobar {
	return if fail { none } else { .foo }
}

fn main() {
	mut foobars := []Foobar{}
	foobars << ?Foobar(.foo)
	foobars << get_foo_or_none(true)
}
